--- a/.github/workflows/front-deploy.yml
+++ b/.github/workflows/front-deploy.yml
@@ -24,17 +24,12 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_USER }}/${{ secrets.DOCKER_REPOSITORY }}:${{ github.ref_name }}
-            ${{ secrets.DOCKER_USER }}/${{ secrets.DOCKER_REPOSITORY }}:latest
+            ${{ secrets.DOCKER_USER }}/${{ secrets.DOCKER_REPOSITORY }}:frontend-${{ github.ref_name }}
+            ${{ secrets.DOCKER_USER }}/${{ secrets.DOCKER_REPOSITORY }}:frontend-latest
 
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
+      - name: Trigger Deploy repo
+        uses: peter-evans/repository-dispatch@v3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            cd /home/${{ secrets.SERVER_USER }}/deploy
-            git pull origin develop
-            docker-compose pull
-            docker-compose up -d
+          token: ${{ secrets.DEPLOY_REPO_TOKEN }}
+          repository: constitution-recipes/Deploy
+          event-type: frontend-updated
