--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/react": "19.1.2",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.3.1",
