.env 파일의 API URL을 로컬 주소에서 배포 주소로 변경

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-AI_DATA_URL=http://localhost:4567 
-NEXT_PUBLIC_API_URL=http://localhost:1492
+AI_DATA_URL=http://constitution-recipe.shop:4567 
+NEXT_PUBLIC_API_URL=https://constitution-recipe.shop
